--- a/package.json
+++ b/package.json
@@ -6,9 +6,15 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "antd": "^4.2.0",
+    "customize-cra": "^0.9.1",
     "react": "^16.13.1",
+    "react-app-rewired": "^2.1.6",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.1"
+    "moment": "2.24.0",
+    "moment-timezone": "^0.5.28",
+    "react-scripts": "3.4.1",
+    "sass": "^1.26.5"
   },
   "scripts": {
     "start": "react-scripts start",
