--- a/package.json
+++ b/package.json
@@ -38,5 +38,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "babel-plugin-import": "^1.13.0",
+    "less-loader": "^6.0.0",
+    "less-vars-to-js": "^1.3.0"
   }
 }
